# barkpart

./: .gitignore  LICENSE  pyproject.toml
barkpart/reels/: areel.py  capacitor.py  inductor.py  resistor.py
