[tool.poetry]
name = "barkpart"
version = "0.1.0"
description = "Open Source parts manager"
authors = ["Kay Barkbark"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^24.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
